Fix error in english translation and fix error where register-form would appear behind it's backdrop

--- a/public/css/map.less
+++ b/public/css/map.less
@@ -50,8 +50,6 @@ body {
             right: 0;
         }
 
-        @media( max-width: 980px ){ .info { top: 50px; } }
-
         ul.list {
             margin: 0;
             padding: 0;
